fix logo not showing

--- a/src/styles/4-components/_header.scss
+++ b/src/styles/4-components/_header.scss
@@ -1,8 +1,8 @@
 #header {
   padding: 0.5rem 0;
 
-  .logo a {
-    z-index: 3;
+  .logo {
+    z-index: 4;
     display: block;
     background-size: contain;
     background-repeat: no-repeat;
